--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
         <div class="intro">
             <h1>Wij zijn Hoekstra & Veldhuis</h1>
-            <p>Een teksbureau waar het nog écht draait om tekst. Waar de woorden centraal staan en waar we iedere dag
+            <p>Een tekstbureau waar het nog écht draait om tekst. Waar de woorden centraal staan en waar we iedere dag
                 samenwerken aan het schrijven van teksten die inspireren, imponeren en motiveren. Samen vertellen we uw
                 verhaal.</p>
             <a href="#scroll-down-anchor">
