--- a/index.html
+++ b/index.html
@@ -21,33 +21,45 @@
     <link rel="stylesheet" href="styles.css"/>
 
     <!-- Other dependencies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+
 
 </head>
 <body>
 <div class="container">
     <div class="navigation">
-        <nav class="navbar navbar-expand d-flex">
+        <nav class="navbar navbar-expand-lg d-flex navbar-light">
         <span class="navbar-brand">
             <a href="/">
                 <img src="static/henv_logo.png" alt="Logo Hoekstra & Veldhuis"/>
             </a>
         </span>
-                <ul class="nav">
-                    <li class="nav-link">over ons</li>
-                    <li class="nav-link">ons boek</li>
-                    <li class="nav-link">contact opnemen</li>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="nav navbar-nav">
+                    <li class="nav-link nav-item first"><a href="#">over ons</a></li>
+                    <li class="nav-link nav-item"><a href="#">ons boek</a></li>
+                    <li class="nav-link nav-item last"><a href="#">contact opnemen</a></li>
                 </ul>
+            </div>
         </nav>
     </div>
     <main>
         <div class="intro">
             <h1>Wij zijn Hoekstra & Veldhuis</h1>
-            <p>Een tekstbureau waar het nog écht draait om tekst. Waar de woorden centraal staan en waar we iedere dag
+            <p>Een teksbureau waar het nog écht draait om tekst. Waar de woorden centraal staan en waar we iedere dag
                 samenwerken aan het schrijven van teksten die inspireren, imponeren en motiveren. Samen vertellen we uw
                 verhaal.</p>
             <a href="#scroll-down-anchor">
-                <lottie-player style="width: 30%; margin-left: -10px;" class="scroll-down" src="https://assets3.lottiefiles.com/packages/lf20_baw08n.json" speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+                <lottie-player style="width: 30%; margin-left: -10px;" class="scroll-down"
+                               src="https://assets3.lottiefiles.com/packages/lf20_baw08n.json" speed="1"
+                               style="width: 300px; height: 300px;" loop autoplay></lottie-player>
             </a>
         </div>
     </main>
