Styled hamburger menu

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                <ul class="nav navbar-nav">
+            <div class="collapse navbar-collapse flex-grow-1" id="navbar">
+                <ul class="nav navbar-nav justify-content-end flex-grow-1">
                     <li class="nav-link nav-item first"><a href="#">over ons</a></li>
                     <li class="nav-link nav-item"><a href="#">ons boek</a></li>
                     <li class="nav-link nav-item last"><a href="#">contact opnemen</a></li>
