--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-
+    <script>
+       $(document).ready(function() {
+           $("button").click(function(){
+               $("p").toggleClass("main");
+           });
+       })
+    </script>
 
 </head>
 <body>
@@ -37,9 +42,11 @@
                 <img src="static/henv_logo.png" alt="Logo Hoekstra & Veldhuis"/>
             </a>
         </span>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="icon-bar top-bar"></span>
+                <span class="icon-bar middle-bar"></span>
+                <span class="icon-bar bottom-bar"></span>
             </button>
             <div class="collapse navbar-collapse flex-grow-1" id="navbar">
                 <ul class="nav navbar-nav justify-content-end flex-grow-1">
