--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
 </head>
 <body>
-<div class="container">
     <div class="navigation">
         <nav class="navbar navbar-expand-lg d-flex navbar-light">
         <span class="navbar-brand">
@@ -57,19 +56,25 @@
             </div>
         </nav>
     </div>
-    <main>
-        <div class="intro">
-            <h1>Wij zijn Hoekstra & Veldhuis</h1>
-            <p>Een teksbureau waar het nog écht draait om tekst. Waar de woorden centraal staan en waar we iedere dag
-                samenwerken aan het schrijven van teksten die inspireren, imponeren en motiveren. Samen vertellen we uw
-                verhaal.</p>
-            <a href="#scroll-down-anchor">
-                <lottie-player style="width: 30%; margin-left: -10px;" class="scroll-down"
-                               src="https://assets3.lottiefiles.com/packages/lf20_baw08n.json" speed="1"
-                               style="width: 300px; height: 300px;" loop autoplay></lottie-player>
-            </a>
+    <div class="container-fluid d-flex" id="intro">
+        <div class="intro d-flex">
+            <div class="text-container">
+                <h1>Wij zijn Hoekstra & Veldhuis</h1>
+                <p>Een tekstbureau waar het nog écht draait om tekst. Waar de woorden centraal staan en waar we iedere dag
+                    samenwerken aan het schrijven van teksten die inspireren, imponeren en motiveren. Samen vertellen we uw
+                    verhaal.</p>
+                <a href="#scroll-down-anchor">
+                    <lottie-player class="scroll-down"
+                                   src="https://assets3.lottiefiles.com/packages/lf20_baw08n.json" speed="1"
+                                   style="width: 60px; height: 30px; margin-left: -10px;" loop autoplay></lottie-player>
+                </a>
+            </div>
         </div>
-    </main>
-</div>
+    </div>
+    <div class="container-fluid d-flex" id="cases">
+        <div class="cases" id="scroll-down-anchor">
+            <h2>Onze werkzaamheden</h2>
+        </div>
+    </div>
 </body>
 </html>
