Added cases and accompanying svg-files to the homepage. Changed some minor css.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@
     <div class="container-fluid d-flex" id="cases">
         <div class="cases" id="scroll-down-anchor">
             <h2>Onze werkzaamheden</h2>
+            <div class="cases-grid-container">
+                <div class="case-grid-item">
+                    <h3>Logopediepraktijk Urk</h3>
+                    <h4>Van wollige taal en jargon, naar leesbare taal voor kinderen en volwassenen.</h4>
+                </div>
+                <div class="case-grid-item grid-image"><img src="static/henv-client-highlight-1.svg"></div>
+                <div class="case-grid-item grid-image"><img src="static/henv-client-highlight-2.svg"></div>
+                <div class="case-grid-item">
+                    <h3>Esthégi</h3>
+                    <h4>Wervende teksten over gevoelige onderwerpen, geoptimaliseerd voor zoekmachines.</h4>
+                </div>
+                <div class="case-grid-item">
+                    <h3>TomTom Interim Management</h3>
+                    <h4>Adviezen en bijstand op het gebied van communicatie van kernwaarden.</h4>
+                </div>
+                <div class="case-grid-item grid-image"><img src="static/henv-client-highlight-3.svg"></div>
+                <div class="case-grid-item grid-image"><img src="static/henv-client-highlight-4.svg"></div>
+                <div class="case-grid-item">
+                    <h3>ISG Arcus</h3>
+                    <h4>Toneelstukken, scripts en auditiemateriaal voor verschillende uitvoeringen.</h4>
+                </div>
+            </div>
         </div>
     </div>
 </body>
