--- a/index.html
+++ b/index.html
@@ -74,26 +74,66 @@
     <div class="container-fluid d-flex" id="cases">
         <div class="cases" id="scroll-down-anchor">
             <h2>Onze werkzaamheden</h2>
-            <div class="cases-grid-container">
-                <div class="case-grid-item">
+            <div class="grid-container">
+                <div>
                     <h3>Logopediepraktijk Urk</h3>
                     <h4>Van wollige taal en jargon, naar leesbare taal voor kinderen en volwassenen.</h4>
                 </div>
-                <div class="case-grid-item grid-image"><img src="static/henv-client-highlight-1.svg"></div>
-                <div class="case-grid-item grid-image"><img src="static/henv-client-highlight-2.svg"></div>
-                <div class="case-grid-item">
+                <div class="grid-image"><img src="static/henv-client-highlight-1.svg"></div>
+                <div class="grid-image"><img src="static/henv-client-highlight-2.svg"></div>
+                <div>
                     <h3>Esthégi</h3>
                     <h4>Wervende teksten over gevoelige onderwerpen, geoptimaliseerd voor zoekmachines.</h4>
                 </div>
-                <div class="case-grid-item">
+                <div>
                     <h3>TomTom Interim Management</h3>
                     <h4>Adviezen en bijstand op het gebied van communicatie van kernwaarden.</h4>
                 </div>
-                <div class="case-grid-item grid-image"><img src="static/henv-client-highlight-3.svg"></div>
-                <div class="case-grid-item grid-image"><img src="static/henv-client-highlight-4.svg"></div>
-                <div class="case-grid-item">
+                <div class="grid-image"><img src="static/henv-client-highlight-3.svg"></div>
+                <div class="grid-image"><img src="static/henv-client-highlight-4.svg"></div>
+                <div>
                     <h3>ISG Arcus</h3>
                     <h4>Toneelstukken, scripts en auditiemateriaal voor verschillende uitvoeringen.</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid d-flex" id="about">
+        <div class="about">
+            <h2>Wat we doen</h2>
+            <div class="grid-container">
+                <div>
+
+                </div>
+                <div>
+                    <p>We helpen met het vinden van de juiste woorden voor uw verhaal. Of het gaat om een vacaturetekst of een vertaling van een boek: bij Hoekstra & Veldhuis bent u aan het juiste adres. </p>
+                    <p>We geloven in persoonlijke aandacht. Wanneer u daar prijs op stelt, denken we graag met u mee. Neem vandaag nog contact op voor een vrijblijvend adviesgesprek.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid d-flex" id="footer">
+        <div class="footer">
+            <div class="footer-grid">
+                <div>
+                    <b>Hoekstra & Veldhuis</b><br />
+                    <a href="mailto:info@henv.online">info@henv.online</a><br>
+                    Copyright 2020
+                </div>
+                <div>
+                    <b>Volg ons op</b><br />
+                    <a href="https://www.facebook.com/HoekstraenVeldhuis/" rel="nofollow">Facebook</a><br>
+                    <a href="https://www.instagram.com/HoekstraenVeldhuis/" rel="nofollow">Instagram</a>
+                </div>
+                <div>
+                    <b>Kantoor</b><br />
+                    Ekenstein 38<br>
+                    8226RH te Lelystad
+                </div>
+                <div>
+                    KvK 71210229<br />
+                    BTW NL858624205B01<br />
+                    <a href="documents/hoekstra-en-veldhuis-algemene-voorwaarden.pdf">Algemene Voorwaarden</a>
                 </div>
             </div>
         </div>
