--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Website meta -->
     <meta charset="UTF-8"/>
     <title>Hoekstra & Veldhuis - Samen vertellen we uw verhaal</title>
+    <link rel="icon" type="image/png" href="static/favicon.png" />
     <meta name="description"
           content="Bij Hoekstra & Veldhuis draait alles om tekst. Of het nu gaat om tekstschrijven, vertalen of SEO optimalisatie. U bent bij ons aan het juiste adres."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
