--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
 </head>
 <body>
     <div class="navigation">
@@ -45,13 +44,13 @@
             <div class="collapse navbar-collapse flex-grow-1" id="navbar">
                 <ul class="nav navbar-nav justify-content-end flex-grow-1">
                     <li class="nav-link nav-item first"><a href="#">over ons</a></li>
-                    <li class="nav-link nav-item"><a href="#">ons boek</a></li>
+                    <li class="nav-link nav-item"><a href="#">onze boeken</a></li>
                     <li class="nav-link nav-item last"><a href="#">contact opnemen</a></li>
                 </ul>
             </div>
         </nav>
     </div>
-    <div class="container-fluid d-flex" id="intro">
+    <div class="container-fluid d-flex full-height" id="intro">
         <div class="intro d-flex">
             <div class="text-container">
                 <h1>Wij zijn Hoekstra & Veldhuis</h1>
@@ -66,7 +65,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid d-flex" id="cases">
+    <div class="container-fluid d-flex full-height" id="cases">
         <div class="cases" id="scroll-down-anchor">
             <h2>Onze werkzaamheden</h2>
             <div class="grid-container">
